# b-plus-generator

./: CMakeLists.txt  README.md
include/bplus/: cli.h  tree.h  utils.h  web.h
src/cli/: interface.c  main.c
src/core/: tree.c  utils.c
src/web/: server.c
tests/unit/: test_cli.c  test_operations.c  test_runner.c  test_tree.c
